# holopku

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  diesel.toml
config/: log4rs.yaml
migrations/2024-09-12-054136_create_tables/: down.sql  up.sql
migrations/2024-09-12-132611_create_indices/: down.sql  up.sql
picture/: 0
proto/api/v1/: amusementPost.proto  auth.proto  foodPost.proto  forum.proto  hello.proto  post.proto  sellPost.proto
src/: client.rs  crypto.rs  hello.rs  lib.rs  schema.rs  server.rs
src/auth/: iaaa.rs  mod.rs  password.rs
src/codegen/: amusement_post.rs  auth.rs  food_post.rs  forum.rs  hello.rs  post.rs  sell_post.rs
src/db/: mod.rs  models.rs  schema.rs
src/forum/: mod.rs
src/middleware/: mod.rs
src/tests/: mod.rs
