[package]
name = "holopku"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = [
    "32-column-tables",
    "chrono",
    "postgres",
    "postgres_backend",
    "uuid",
    "r2d2",
] }
dotenvy = "0.15"
hyper = "1.4.1"
jsonwebtoken = "9.3"
log = "0.4"
md5 = "0.7"
prost = "0.13"
prost-types = "0.13"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
tonic = "0.12"
tonic-web = "0.12"
tower = { version = "0.5", features = ["timeout", "retry"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
